resolved fdo#59583 prevent inappropriate column/row label detection

If followed by '(' (with or without space inbetween) an identifier can
not be a column/row label. Prevent arbitrary content detection in case a
macro function of the same name is meant (fdo#59583) or if it wouldn't
resolve to a known function name at all, that earlier resulted in #REF!
instead of #NAME? in the case of unknown function but label found.

(cherry picked from commit aa2b8bde171bf9562536dc14b2cf81d81e31b438)

Change-Id: I28d2e2492bddc02c07e139edbc69595a4f3f4a63